@@ -43,7 +43,7 @@
       <id>examples</id>
       <modules>
         <module>examples/java</module>
-        <!--module>examples/scala</module-->
+        <module>examples/scala</module>
         <module>examples/groovy</module>
         <module>examples/groovy-webdriver</module>
         <module>examples/ioke</module>
